--- a/manifest-firefox.json
+++ b/manifest-firefox.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "YT Quick Actions (all playlists)",
-  "version": "1.1.1b",
+  "version": "1.1.2",
   "description": "Provide quick access to hidden YouTube actions.",
   "icons": {
     "48": "assets/extension-icons/firefox/icon.svg",
