--- a/manifest-firefox.json
+++ b/manifest-firefox.json
@@ -25,7 +25,7 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "nelxiost_yt_quick_actions_all_playlists"
+      "id": "nelxiost@gmail.com"
     }
   }
 }
